--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "A dependent of `wiby` which passes some of the checks",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "[[ $WIBY_TEST_PASS == 'true' ]]"
   },
   "repository": {
     "type": "git",
