--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@wiby-test/parent": "wiby-test/parent#dominykas-patch-1",
-    "wiby": "*"
+    "@wiby-test/parent": "*",
+    "wiby": "pkgjs/wiby#dominykas-patch-1"
   }
 }
